fix the alignment

--- a/wdd230/lesson02/styles/large.css
+++ b/wdd230/lesson02/styles/large.css
@@ -45,8 +45,8 @@ section * {
 h3 {
     margin: 0;
     font-family: 'Gugi', sans-serif;
-    padding: 6px;
-    text-align: left;
+    padding: 10px;
+    /* text-align: center; */
     background: seagreen;
     color: white;
 }
